--- a/wx-mini-program/pages/brand/brand.wxml
+++ b/wx-mini-program/pages/brand/brand.wxml
@@ -1,14 +1,15 @@
 <view class="container">
   <view class="brand-list">
     <navigator url="../brandDetail/brandDetail?id={{item.id}}" class="item" wx:for="{{brandList}}" wx:key="id">
+      <view class="h">
+        <view class="l">{{item.name}}</view>
+        <view class="r">进店看看</view>
+      </view>
       <view class="img-bg">
         <image src="{{item.picUrl}}" background-size="cover"></image>
       </view>
       <view class="txt-box">
         <view class="line">
-          <text class="name">{{item.name}}</text>
-          <text class="s">|</text>
-          <text class="price">{{item.floorPrice}}元起</text>
         </view>
       </view>
     </navigator>
