--- a/wx-mini-program/pages/brandDetail/brandDetail.wxss
+++ b/wx-mini-program/pages/brandDetail/brandDetail.wxss
@@ -53,11 +53,11 @@ page {
   width: 100%;
   height: auto;
   overflow: hidden;
-  padding: 41.5rpx 31.25rpx;
+  padding: 21.5rpx 31.25rpx;
   font-size: 30rpx;
   color: #666;
   line-height: 41.5rpx;
-  text-align: center;
+  text-align: left;
 }
 
 .cate-item .b {
@@ -107,5 +107,4 @@ page {
   height: 30rpx;
   text-align: center;
   font-size: 30rpx;
-  color: #b4282d;
 }
