--- a/wx-mini-program/pages/newGoods/newGoods.wxss
+++ b/wx-mini-program/pages/newGoods/newGoods.wxss
@@ -82,7 +82,7 @@ page {
 }
 
 .sort-box .item.active .txt {
-  color: #b4282d;
+  color: #ec4223;
 }
 
 .sort-box .item.by-price {
@@ -122,8 +122,8 @@ page {
 }
 
 .sort-box-category .item.active {
-  color: #b4282d;
-  border: 1px solid #b4282d;
+  color: #ec4223;
+  border: 1px solid #ec4223;
 }
 
 .cate-item .b {
@@ -173,5 +173,5 @@ page {
   height: 30rpx;
   text-align: center;
   font-size: 30rpx;
-  color: #b4282d;
+  color: #ec4223;
 }
