代理海报分享与微信lib升级

--- a/wx-mini-program/lib/coupon-window/index.wxml
+++ b/wx-mini-program/lib/coupon-window/index.wxml
@@ -1,6 +1,6 @@
 <view class='coupon-window {{window==true?"on":""}}'>
    <view class='couponWinList'>
-      <view class='item acea-row row-between-wrapper' wx:for="{{couponList}}" wx:key>
+      <view class='item acea-row row-between-wrapper' wx:for="{{couponList}}" wx:for-index="index" wx:for-item="item" wx:key="id">
          <view class='money font-color'>￥<text class='num'>{{item.discount}}</text></view>
          <view class='text'>
             <view class='name'>【{{item.desc}}】购物买{{item.min}}减{{item.discount}}</view>
