--- a/wx-mini-program/pages/ucenter/user/user.wxml
+++ b/wx-mini-program/pages/ucenter/user/user.wxml
@@ -44,7 +44,8 @@
         </view>
     </view>
     <view wx:if="{{userSharedUrl && userSharedUrl!=''}}" style="text-align:center;background-color:#fff;">
-      <image class="img" src="{{userSharedUrl}}" style="width:600rpx;height:600rpx;"></image>
+      <view>代理专属推广二维码（长按保存到相册）</view>
+      <image class="img" src="{{userSharedUrl}}" bindlongpress="saveShare" style="width:600rpx;height:600rpx;"></image>
     </view>
     <button class='modifyBnt' bindtap="exitLogin">退 出</button>
   </view>
