--- a/wx-mini-program/pages/goods/goods.wxml
+++ b/wx-mini-program/pages/goods/goods.wxml
@@ -21,11 +21,11 @@
         </button>
         <button  class="savesharebtn" open-type="openSetting" bindopensetting="handleSetting" wx:if="{{(!isGroupon) && (!canWrite)}}" >
           <image class='sharebtn_image' src='/static/images/friend.png'></image>
-          <view class='sharebtn_text'>发朋友圈</view>
+          <view class='sharebtn_text'>保存海报到相册</view>
         </button>
         <button class="savesharebtn" bindtap="saveShare" wx:if="{{!isGroupon && canWrite}}">
           <image class='sharebtn_image' src='/static/images/friend.png'></image>
-          <view class='sharebtn_text'>发朋友圈</view>
+          <view class='sharebtn_text'>保存海报到相册</view>
         </button>
       </view>
     </view>
