--- a/wx-mini-program/pages/auth/login/login.wxml
+++ b/wx-mini-program/pages/auth/login/login.wxml
@@ -1,6 +1,7 @@
 <view class="container">
   <view class="login-box">
-    <button type="primary" open-type="getUserInfo" class="wx-login-btn" bindgetuserinfo="wxLogin">微信直接登录</button>
+    <button wx:if="{{canIUseGetUserProfile}}" class="wx-login-btn" bindtap="getUserProfile">微信直接登录</button>
+    <button wx:else open-type="getUserInfo" class="wx-login-btn" bindgetuserinfo="wxLogin">微信直接登录</button>
     <button type="primary" class="account-login-btn" bindtap="accountLogin">账号登录</button>
   </view>
 </view>
